Add configuration to connect to Aprender project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,11 @@ services:
       - plai
     command:
       - --import-realm
+      - --http-relative-path /auth 
 
 volumes:
   src:
 networks:
   plai:
+    external: false
+    name: plai
